--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
         <activity android:name=".welcome.WelcomeSlidePagerActivity" />
         <activity android:name=".configuration.Configuration" />
         <activity android:name=".menu.Main" />
+        <activity android:name=".sports.SportsDetail" android:theme="@style/sportsDialog" />
+
+        <activity
+            android:name=".messages.MessagesDetail"
+            android:label="Mensaje">
+        </activity>
 
         <service
             android:name="com.octo.android.robospice.JacksonGoogleHttpClientSpiceService"
