--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     compile 'com.github.chrisbanes.actionbarpulltorefresh:library:+'
     compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.1'
     compile 'com.daimajia.numberprogressbar:library:1.1@aar'
+    compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
 }
