--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".main.Aplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -21,14 +22,31 @@
             </intent-filter>
         </activity>
         <activity android:name=".welcome.WelcomeSlidePagerActivity" />
-        <activity android:name=".configuration.Configuration" />
         <activity android:name=".menu.Main"
                   android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name=".sports.SportsDetail" android:theme="@style/sportsDialog" />
 
         <activity
+            android:name=".configuration.Configuration"
+            android:label="Configuración"
+            android:parentActivityName=".menu.Main" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".menu.Main" />
+        </activity>
+
+        <activity
             android:name=".messages.MessagesDetail"
             android:label="Mensaje"
+            android:parentActivityName=".menu.Main" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".menu.Main" />
+        </activity>
+
+        <activity
+            android:name=".courses.CoursesDetail"
+            android:label="Curso"
             android:parentActivityName=".menu.Main" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
