--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ configurations {
 dependencies {
     //compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:20.+'
+    compile 'com.google.android.gms:play-services:+'
+    compile 'com.github.alamkanak:android-week-view:1.1.6'
     compile 'com.viewpagerindicator:library:2.4.1@aar'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     compile 'com.octo.android.robospice:robospice:1.4.13'
