--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,6 @@ dependencies {
     //compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:20.+'
     compile 'com.google.android.gms:play-services:+'
-    compile 'com.github.alamkanak:android-week-view:1.1.6'
     compile 'com.viewpagerindicator:library:2.4.1@aar'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     compile 'com.octo.android.robospice:robospice:1.4.13'
@@ -54,4 +53,5 @@ dependencies {
     compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.1'
     compile 'com.daimajia.numberprogressbar:library:1.1@aar'
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
+    compile 'com.github.alamkanak:android-week-view:1.1.6@aar'
 }
