--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="cl.uai.uai" >
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -16,7 +17,8 @@
     <application
         android:allowBackup="true"
         android:name=".main.Aplication"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/uai_icon"
+        tools:replace="android:icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
