--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.0.0"
+    buildToolsVersion "21.0.2"
 
     defaultConfig {
         applicationId "cl.uai.uai"
@@ -13,7 +13,7 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -38,8 +38,8 @@ configurations {
 dependencies {
     //compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:21.+'
-    compile 'com.android.support:appcompat-v7:21.0.+'
-    compile 'com.google.android.gms:play-services:+'
+    compile 'com.android.support:appcompat-v7:21.+'
+    compile 'com.google.android.gms:play-services:6.1.+'
     compile 'com.viewpagerindicator:library:2.4.1@aar'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     compile 'com.octo.android.robospice:robospice:1.4.13'
@@ -53,6 +53,5 @@ dependencies {
     compile 'com.github.chrisbanes.actionbarpulltorefresh:library:+'
     compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.1'
     compile 'com.daimajia.numberprogressbar:library:1.1@aar'
-    compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'com.github.alamkanak:android-week-view:1.1.6@aar'
 }
