--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,9 @@ dependencies {
     compile 'com.daimajia.numberprogressbar:library:1.1@aar'
     compile 'com.github.alamkanak:android-week-view:1.1.6@aar'
     compile 'com.github.traex.rippleeffect:library:1.2.2'
+    compile 'org.jsoup:jsoup:1.7.3'
+    compile 'com.github.amlcurran.showcaseview:library:5.0.0'
+    compile 'com.snappydb:snappydb-lib:0.5.0'
+    compile 'com.esotericsoftware.kryo:kryo:2.24.0'
+    compile 'com.balysv:material-ripple:0.9.3-SNAPSHOT@aar'
 }
